Fix: added box-sizing: border-box to the input so that it won't overflow it's parent when you set it width to 100%

--- a/src/Input/index.scss
+++ b/src/Input/index.scss
@@ -24,6 +24,7 @@
         border-bottom: 1px solid #757575;
         outline: 0;
         box-shadow: none;
+        box-sizing: border-box;
 
         &:focus {
             ~ label {
